--- a/FreeCAD/Arch_sv-SE.xliff
+++ b/FreeCAD/Arch_sv-SE.xliff
@@ -39,7 +39,7 @@
       </trans-unit>
       <trans-unit id="6678230" resname="ArchMaterial['Copy existing…']">
         <source>Copy existing…</source>
-        <target state="translated">Kopiera befintliga..</target>
+        <target state="translated">Kopiera befintliga…</target>
         <context-group purpose="information">
           <context context-type="source">ArchMaterial
 ../ui/ArchMaterial.ui:48</context>
@@ -568,7 +568,7 @@ i det projektet, oavsett om de är expanderade eller inte.</target>
       </trans-unit>
       <trans-unit id="6678380" resname="Dialog['Exports results to a CSV or Markdown file. For CSV export in LibreOffice: maintain a live link by right-clicking the Sheets tab bar → New Sheet → From File → Link. In LibreOffice v6.x and later: use Sheet → Insert Sheet… → From File → Browse…']">
         <source>Exports results to a CSV or Markdown file. For CSV export in LibreOffice: maintain a live link by right-clicking the Sheets tab bar → New Sheet → From File → Link. In LibreOffice v6.x and later: use Sheet → Insert Sheet… → From File → Browse…</source>
-        <target state="translated">Exporterar resultat till en CSV- eller Markdown-fil. För CSV-export i LibreOffice: behåll en direktlänk genom att högerklicka på flikfältet Ark → Nytt ark → Från fil → Länk. I LibreOffice v6.x och senare: använd Ark → Infoga ark... → Från fil → Bläddra..</target>
+        <target state="translated">Exporterar resultat till en CSV- eller Markdown-fil. För CSV-export i LibreOffice: behåll en direktlänk genom att högerklicka på flikfältet Ark → Nytt ark → Från fil → Länk. I LibreOffice v6.x och senare: använd Ark → Infoga ark... → Från fil → Bläddra…</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../ui/ArchSchedule.ui:226</context>
@@ -1744,7 +1744,7 @@ i det projektet, oavsett om de är expanderade eller inte.</target>
       </trans-unit>
       <trans-unit id="6650692" resname="Dialog['0 ']">
         <source>0 </source>
-        <target state="translated">0</target>
+        <target state="translated">0 </target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../ui/dialogProjectManager.ui:506
@@ -2132,7 +2132,7 @@ i det projektet, oavsett om de är expanderade eller inte.</target>
       </trans-unit>
       <trans-unit id="6688198" resname="Dialog['FreeCAD is a complex application. For those new to FreeCAD, or without prior experience in 3D modelling or BIM, it is recommended to begin with the &lt;a href=&quot;https://wiki.freecad.org/BIM_ingame_tutorial&quot;>BIM tutorial&lt;/a>. This can also be accessed under menu &lt;span style=&quot; font-weight:600;&quot;>Help -&amp;gt; BIM Tutorial&lt;/span>.']">
         <source>FreeCAD is a complex application. For those new to FreeCAD, or without prior experience in 3D modelling or BIM, it is recommended to begin with the &lt;a href="https://wiki.freecad.org/BIM_ingame_tutorial"&gt;BIM tutorial&lt;/a&gt;. This can also be accessed under menu &lt;span style=" font-weight:600;"&gt;Help -&amp;gt; BIM Tutorial&lt;/span&gt;.</source>
-        <target state="translated">FreeCAD är en komplex applikation. För dem som är nya i FreeCAD, eller utan tidigare erfarenhet av 3D-modellering eller BIM, rekommenderas det att börja med &lt;a href="https://wiki.freecad.org/BIM_ingame_tutorial"&gt;BIM-handledningen&lt;/a&gt;. Detta kan också nås under menyn &lt;span style=" font-weight:600;"&gt;Hjälp -&amp;gt; BIM Tutorial.&lt;/span&gt;</target>
+        <target state="translated">FreeCAD är en komplex applikation. För dem som är nya i FreeCAD, eller utan tidigare erfarenhet av 3D-modellering eller BIM, rekommenderas det att börja med &lt;a href="https://wiki.freecad.org/BIM_ingame_tutorial"&gt;BIM-handledningen&lt;/a&gt;. Detta kan också nås under menyn &lt;span style=" font-weight:600;"&gt;Hjälp -&amp;gt; BIM Tutorial&lt;/span&gt;.</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../ui/dialogWelcome.ui:100</context>
@@ -2148,7 +2148,7 @@ i det projektet, oavsett om de är expanderade eller inte.</target>
       </trans-unit>
       <trans-unit id="6679076" resname="Dialog['A good way to start building a BIM model is by setting up basic characteristics of the project, under menu &lt;span style=&quot; font-weight:600;&quot;>Manage -&amp;gt; Project setup&lt;/span>. Different floor plans for the project can be configured via &lt;span style=&quot; font-weight:600;&quot;>Manage -&amp;gt; Levels.&lt;/span>']">
         <source>A good way to start building a BIM model is by setting up basic characteristics of the project, under menu &lt;span style=" font-weight:600;"&gt;Manage -&amp;gt; Project setup&lt;/span&gt;. Different floor plans for the project can be configured via &lt;span style=" font-weight:600;"&gt;Manage -&amp;gt; Levels.&lt;/span&gt;</source>
-        <target state="translated">Ett bra sätt att börja bygga en BIM-modell är att ställa in grundläggande egenskaper för projektet, under menyn &lt;span style=" font-weight:600;"&gt;Hantera -&amp;gt; Projektinställningar&lt;/span&gt;. Olika planlösningar för projektet kan konfigureras via Hantera &lt;span style=" font-weight:600;"&gt;-&amp;gt; Nivåer&lt;/span&gt;.</target>
+        <target state="translated">Ett bra sätt att börja bygga en BIM-modell är att ställa in grundläggande egenskaper för projektet, under menyn &lt;span style=" font-weight:600;"&gt;Hantera -&amp;gt; Projektinställningar&lt;/span&gt;. Olika planlösningar för projektet kan konfigureras via &lt;span style=" font-weight:600;"&gt;Hantera -&amp;gt; Nivåer.&lt;/span&gt;</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../ui/dialogWelcome.ui:120</context>
@@ -2473,7 +2473,7 @@ La traduction des noms de commandes et des termes spécifiques à cet outil peut
       </trans-unit>
       <trans-unit id="6679188" resname="Form['Copy existing…']">
         <source>Copy existing…</source>
-        <target state="translated">Kopiera befintliga..</target>
+        <target state="translated">Kopiera befintliga…</target>
         <context-group purpose="information">
           <context context-type="source">Form
 ../ui/ArchMultiMaterial.ui:21</context>
@@ -4133,7 +4133,7 @@ They can be modified...</note>
       </trans-unit>
       <trans-unit id="6496784" resname="Gui::Dialog::DlgSettingsArch['If this is checked, flat groups of faces will be force-flattened, resulting in possible gaps and non-solid results']">
         <source>If this is checked, flat groups of faces will be force-flattened, resulting in possible gaps and non-solid results</source>
-        <target state="translated">Om detta alternativ kryssas för, kommer platta grupper av ytor bli tvångsutplattade. Detta kan resultera i att geometri får hål eller inte längre är solid…</target>
+        <target state="translated">Om detta alternativ kryssas för, kommer platta grupper av ytor bli tvångsutplattade. Detta kan resultera i att geometri får hål eller inte längre är solid</target>
         <context-group purpose="information">
           <context context-type="source">Gui::Dialog::DlgSettingsArch
 ../ui/preferences-arch.ui:276</context>
@@ -9587,7 +9587,7 @@ Skapandet av byggnaden avbröts.</target>
       </trans-unit>
       <trans-unit id="6672960" resname="App::Property['Select User Defined PropertySet to use in creating variant shape, with same ArchSketch ']">
         <source>Select User Defined PropertySet to use in creating variant shape, with same ArchSketch </source>
-        <target state="translated">Välj en uppsättning användardefinierade egenskaper som ska användas för att skapa en variantform med samma ArchSketch</target>
+        <target state="translated">Välj en uppsättning användardefinierade egenskaper som ska användas för att skapa en variantform med samma ArchSketch </target>
         <context-group purpose="information">
           <context context-type="source">App::Property
 ../../ArchStairs.py:223
@@ -13025,7 +13025,7 @@ Tooltip der bei einem Frame Objekt im data feld &gt; Frame &gt; Base Point(/Basi
       </trans-unit>
       <trans-unit id="6662420" resname="App::Property['This overrides Offset attribute to set offset of each segment of wall.  Disabled and ignored if Base object (ArchSketch) provides Offsets information, with getOffsets() method  (If a value is zero, the value of 'Offset' will be followed).  [ENHANCED by ArchSketch] GUI 'Edit Wall Segment Offset' Tool is provided in external Add-on ('SketchArch') to let users to select the edges interactively.  'Toponaming-Tolerant' if ArchSketch is used in Base (and SketchArch Add-on is installed).  Warning : ">
         <source>This overrides Offset attribute to set offset of each segment of wall.  Disabled and ignored if Base object (ArchSketch) provides Offsets information, with getOffsets() method  (If a value is zero, the value of 'Offset' will be followed).  [ENHANCED by ArchSketch] GUI 'Edit Wall Segment Offset' Tool is provided in external Add-on ('SketchArch') to let users to select the edges interactively.  'Toponaming-Tolerant' if ArchSketch is used in Base (and SketchArch Add-on is installed).  Warning : Not 'Toponaming-Tolerant' if just Sketch is used. Property is ignored if Base ArchSketch provided the selected edges. </source>
-        <target state="translated">Detta åsidosätter Offset-attributet för att ställa in offset för varje väggsegment.  Inaktiveras och ignoreras om basobjektet (ArchSketch) tillhandahåller Offsets-information med metoden getOffsets() (om ett värde är noll kommer värdet på 'Offset' att följas).  [FÖRBÄTTRAD av ArchSketch] GUI 'Edit Wall Segment Offset' Tool tillhandahålls i externt tillägg ('SketchArch') för att låta användare välja kanterna interaktivt.  "Toponaming-tolerant" om ArchSketch används i Base (och tillägget SketchArch är installerat).  Varning : Inte "Toponaming-tolerant" om bara Sketch används. Egenskapen ignoreras om Base ArchSketch tillhandahåller de valda kanterna.</target>
+        <target state="translated">Detta åsidosätter Offset-attributet för att ställa in offset för varje väggsegment.  Inaktiveras och ignoreras om basobjektet (ArchSketch) tillhandahåller Offsets-information med metoden getOffsets() (om ett värde är noll kommer värdet på 'Offset' att följas).  [FÖRBÄTTRAD av ArchSketch] GUI 'Edit Wall Segment Offset' Tool tillhandahålls i externt tillägg ('SketchArch') för att låta användare välja kanterna interaktivt.  "Toponaming-tolerant" om ArchSketch används i Base (och tillägget SketchArch är installerat).  Varning : Inte "Toponaming-tolerant" om bara Sketch används. Egenskapen ignoreras om Base ArchSketch tillhandahåller de valda kanterna. </target>
         <context-group purpose="information">
           <context context-type="source">App::Property
 ../../ArchWall.py:180</context>
@@ -13122,7 +13122,7 @@ Tooltip der bei einem Frame Objekt im data feld &gt; Frame &gt; Base Point(/Basi
       </trans-unit>
       <trans-unit id="6672988" resname="App::Property['Select User Defined PropertySet to use in creating variant shape, layers of the Arch Wall with same ArchSketch ']">
         <source>Select User Defined PropertySet to use in creating variant shape, layers of the Arch Wall with same ArchSketch </source>
-        <target state="translated">Välj användardefinierad PropertySet som ska användas för att skapa variantform, lager av bågväggen med samma ArchSketch</target>
+        <target state="translated">Välj användardefinierad PropertySet som ska användas för att skapa variantform, lager av bågväggen med samma ArchSketch </target>
         <context-group purpose="information">
           <context context-type="source">App::Property
 ../../ArchWall.py:226</context>
@@ -14194,7 +14194,7 @@ There should be no two if-conditions in one sentence.</note>
       </trans-unit>
       <trans-unit id="6682328" resname="BIM['Custom…']">
         <source>Custom…</source>
-        <target state="translated">Anpassad..</target>
+        <target state="translated">Anpassad…</target>
         <context-group purpose="information">
           <context context-type="source">BIM
 ../../BimStatus.py:45
@@ -15150,7 +15150,7 @@ CTRL+PgUp för att förlänga profilenCTRL+PgDown för att krympa profilenCTRL+/
       </trans-unit>
       <trans-unit id="6682396" resname="BIM['Merge To…']">
         <source>Merge To…</source>
-        <target state="translated">Sammanfoga till..</target>
+        <target state="translated">Sammanfoga till…</target>
         <context-group purpose="information">
           <context context-type="source">BIM
 ../../bimcommands/BimMaterial.py:187</context>
@@ -15688,7 +15688,7 @@ CTRL+PgUp för att förlänga profilenCTRL+PgDown för att krympa profilenCTRL+/
       </trans-unit>
       <trans-unit id="6682434" resname="BIM['Downloading images…']">
         <source>Downloading images…</source>
-        <target state="translated">Nedladdning av bilder..</target>
+        <target state="translated">Hämtar bilder…</target>
         <context-group purpose="information">
           <context context-type="source">BIM
 ../../bimcommands/BimTutorial.py:166</context>
@@ -16299,7 +16299,7 @@ Kontrollera din FreeCAD-installation eller ange en anpassad mall under menyn Ins
       </trans-unit>
       <trans-unit id="6688530" resname="BIM['Save IFC File As…']">
         <source>Save IFC File As…</source>
-        <target state="translated">Spara IFC-fil som ..</target>
+        <target state="translated">Spara IFC-fil som…</target>
         <context-group purpose="information">
           <context context-type="source">BIM
 ../../nativeifc/ifc_viewproviders.py:442</context>
@@ -17195,7 +17195,7 @@ You can freely translate each duplicate separately.</note>
       </trans-unit>
       <trans-unit id="6682666" resname="IFC_SaveAs['Save IFC File As…']">
         <source>Save IFC File As…</source>
-        <target state="translated">Spara IFC-fil som ..</target>
+        <target state="translated">Spara IFC-fil som…</target>
         <context-group purpose="information">
           <context context-type="source">IFC_SaveAs
 ../../nativeifc/ifc_commands.py:224</context>
@@ -17252,7 +17252,7 @@ You can freely translate each duplicate separately.</note>
       </trans-unit>
       <trans-unit id="6652576" resname="BIMSetupDialog['0 ']">
         <source>0 </source>
-        <target state="translated">0</target>
+        <target state="translated">0 </target>
         <context-group purpose="information">
           <context context-type="source">BIMSetupDialog
 ../ui/dialogSetup.ui:337
