--- a/FreeCAD/Base_sv-SE.xliff
+++ b/FreeCAD/Base_sv-SE.xliff
@@ -23,7 +23,7 @@
       </trans-unit>
       <trans-unit id="6623373" resname="UnitsApi['US customary (in, lb)']">
         <source>US customary (in, lb)</source>
-        <target state="translated">Amerikanska enheter (in/lb)</target>
+        <target state="translated">US-amerikanska mått (in, lb)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:582</context>
@@ -31,7 +31,7 @@
       </trans-unit>
       <trans-unit id="6623375" resname="UnitsApi['Imperial decimal (in, lb)']">
         <source>Imperial decimal (in, lb)</source>
-        <target state="translated">Brittiska enheter (in/lb)</target>
+        <target state="translated">Imperial decimal (in, lb)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:70</context>
@@ -42,7 +42,7 @@ why not to say Imperial system?</note>
       </trans-unit>
       <trans-unit id="6623377" resname="UnitsApi['Building Euro (cm, m², m³)']">
         <source>Building Euro (cm, m², m³)</source>
-        <target state="translated">Europeiska byggenheter (cm, m², m³)</target>
+        <target state="translated">Byggnad Euro (cm, m², m³)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:543</context>
@@ -50,7 +50,7 @@ why not to say Imperial system?</note>
       </trans-unit>
       <trans-unit id="6623379" resname="UnitsApi['Building US (ft-in, sqft, cft)']">
         <source>Building US (ft-in, sqft, cft)</source>
-        <target state="translated">Amerikanska byggenheter (ft-in, sqft, cft)</target>
+        <target state="translated">Byggnad US (ft-in, sqft, cft)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:620</context>
@@ -58,7 +58,7 @@ why not to say Imperial system?</note>
       </trans-unit>
       <trans-unit id="6663388" resname="UnitsApi['Metric small parts &amp; CNC (mm, mm/min)']">
         <source>Metric small parts &amp; CNC (mm, mm/min)</source>
-        <target state="translated">Meter små delar och CNC (mm, mm/min)</target>
+        <target state="translated">Metriska smådelar &amp; CNC (mm, mm/min)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:48</context>
@@ -67,7 +67,7 @@ why not to say Imperial system?</note>
       </trans-unit>
       <trans-unit id="6632278" resname="UnitsApi['Imperial for Civil Eng (ft, ft/s)']">
         <source>Imperial for Civil Eng (ft, ft/s)</source>
-        <target state="translated">Brittiska enheter för civilingenjörer (fot, fot/s)</target>
+        <target state="translated">Imperial för Civil Eng (ft, ft/s)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:631</context>
@@ -83,7 +83,7 @@ why not to say Imperial system?</note>
       </trans-unit>
       <trans-unit id="6628404" resname="UnitsApi['Meter decimal (m, m², m³)']">
         <source>Meter decimal (m, m², m³)</source>
-        <target state="translated">Meter (m, m², m³)</target>
+        <target state="translated">Meter decimal (m, m², m³)</target>
         <context-group purpose="information">
           <context context-type="source">UnitsApi
 ../../UnitsSchemasData.h:57</context>
