--- a/FreeCAD/FreeCAD_sv-SE.xliff
+++ b/FreeCAD/FreeCAD_sv-SE.xliff
@@ -7,7 +7,7 @@
     <body>
       <trans-unit id="6501271" resname="App::Property['&lt;empty>']">
         <source>&lt;empty&gt;</source>
-        <target state="translated">&lt;empty&gt;</target>
+        <target state="translated">&lt;tom&gt;</target>
         <context-group purpose="information">
           <context context-type="source">App::Property
 ../propertyeditor/PropertyItem.cpp:565</context>
@@ -9466,7 +9466,7 @@ Spara dokumentet nu?</target>
       </trans-unit>
       <trans-unit id="6072045" resname="Gui::ManualAlignment['Too few points picked in the left view. At least %1 points are needed.']" approved="yes">
         <source>Too few points picked in the left view. At least %1 points are needed.</source>
-        <target state="translated">För få poäng valda i den vänstra vyn. Minst %1 punkter behövs.</target>
+        <target state="translated">För få punkter valda i den vänstra vyn. Minst %1 punkter behövs.</target>
         <context-group purpose="information">
           <context context-type="source">Gui::ManualAlignment
 ../ManualAlignment.cpp:945
@@ -9477,7 +9477,7 @@ More precise translation into Russian: Выбрано слишком мало т
       </trans-unit>
       <trans-unit id="6072046" resname="Gui::ManualAlignment['Too few points picked in the right view. At least %1 points are needed.']" approved="yes">
         <source>Too few points picked in the right view. At least %1 points are needed.</source>
-        <target state="translated">För få poäng plockade i rätt vy. Minst %1 punkter behövs.</target>
+        <target state="translated">För få punkter plockade i rätt vy. Minst %1 punkter behövs.</target>
         <context-group purpose="information">
           <context context-type="source">Gui::ManualAlignment
 ../ManualAlignment.cpp:950
@@ -14965,7 +14965,7 @@ Fortsätta?
       </trans-unit>
       <trans-unit id="6673244" resname="Std_DrawStyle['&amp;2 Points']">
         <source>&amp;2 Points</source>
-        <target state="translated">&amp;2 poäng</target>
+        <target state="translated">&amp;2 punkter</target>
         <context-group purpose="information">
           <context context-type="source">Std_DrawStyle
 ../CommandView.cpp:732</context>
