--- a/FreeCAD/Image_sv-SE.xliff
+++ b/FreeCAD/Image_sv-SE.xliff
@@ -7,7 +7,7 @@
     <body>
       <trans-unit id="1171963" resname="CmdCreateImagePlane['Create image plane...']" approved="yes">
         <source>Create image plane...</source>
-        <target state="final">Skapa bildplan ...</target>
+        <target state="translated">Skapa bildplan...</target>
         <context-group purpose="information">
           <context context-type="source">CmdCreateImagePlane
 ../../Command.cpp:101</context>
@@ -17,17 +17,17 @@ Common wording approved.</note>
       </trans-unit>
       <trans-unit id="2744933" resname="CmdCreateImagePlane['Create a planar image in the 3D space']" approved="yes">
         <source>Create a planar image in the 3D space</source>
-        <target state="final">Skapa en plan bild i 3D-rymden</target>
+        <target state="translated">Skapa en plan bild i 3D-rymden</target>
         <context-group purpose="information">
           <context context-type="source">CmdCreateImagePlane
 ../../Command.cpp:102</context>
         </context-group>
         <note from="FLR Eng (flreng)" priority="4">I believe the currently approved translation might not be the best way, please review my translation:
-&quot;Criar uma imagem plana no espaço 3D&quot;</note>
+"Criar uma imagem plana no espaço 3D"</note>
       </trans-unit>
       <trans-unit id="176835" resname="CmdImageOpen['Image']" approved="yes">
         <source>Image</source>
-        <target state="final">Bild</target>
+        <target state="translated">Bild</target>
         <context-group purpose="information">
           <context context-type="source">CmdImageOpen
 ../../Command.cpp:55</context>
@@ -37,7 +37,7 @@ Common wording approved.</note>
       </trans-unit>
       <trans-unit id="176836" resname="CmdImageOpen['Open...']" approved="yes">
         <source>Open...</source>
-        <target state="final">Öppna...</target>
+        <target state="translated">Öppna...</target>
         <context-group purpose="information">
           <context context-type="source">CmdImageOpen
 ../../Command.cpp:56</context>
@@ -45,7 +45,7 @@ Common wording approved.</note>
       </trans-unit>
       <trans-unit id="176837" resname="CmdImageOpen['Open image view']" approved="yes">
         <source>Open image view</source>
-        <target state="final">Öppna bildvy</target>
+        <target state="translated">Öppna bildvisning</target>
         <context-group purpose="information">
           <context context-type="source">CmdImageOpen
 ../../Command.cpp:57</context>
@@ -72,7 +72,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="6511336" resname="CmdImageScaling['Image Scaling']">
         <source>Image Scaling</source>
-        <target state="translated">Bildskalning</target>
+        <target state="translated">Skalning av bilder</target>
         <context-group purpose="information">
           <context context-type="source">CmdImageScaling
 ../../Command.cpp:177</context>
@@ -81,7 +81,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="6591247" resname="Command['Create ImagePlane']">
         <source>Create ImagePlane</source>
-        <target state="translated">Skapa bildplan</target>
+        <target state="translated">Skapa ImagePlane</target>
         <context-group purpose="information">
           <context context-type="source">Command
 ../../Command.cpp:150</context>
@@ -90,7 +90,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="176839" resname="ImageGui::GLImageBox['Image pixel format']" approved="yes">
         <source>Image pixel format</source>
-        <target state="final">Bildens pixelformat</target>
+        <target state="translated">Bildens pixelformat</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::GLImageBox
 ../../OpenGLImageBox.cpp:393</context>
@@ -98,7 +98,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="176838" resname="ImageGui::GLImageBox['Undefined type of colour space for image viewing']" approved="yes">
         <source>Undefined type of colour space for image viewing</source>
-        <target state="final">Odefinierad färgrymd för bildvisning</target>
+        <target state="translated">Odefinierad typ av färgrymd för bildvisning</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::GLImageBox
 ../../OpenGLImageBox.cpp:394</context>
@@ -106,7 +106,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="6497199" resname="ImageGui::ImageOrientationDialog['Choose orientation']">
         <source>Choose orientation</source>
-        <target state="translated">Välj orientering</target>
+        <target state="translated">Välj riktning</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageOrientationDialog
 ../../ImageOrientationDialog.ui:14</context>
@@ -130,7 +130,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="6497202" resname="ImageGui::ImageOrientationDialog['XZ-Plane']">
         <source>XZ-Plane</source>
-        <target state="translated">XZ-Plan</target>
+        <target state="translated">XZ-plan</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageOrientationDialog
 ../../ImageOrientationDialog.ui:36</context>
@@ -138,7 +138,7 @@ passend zu: (Befehl xxx) macht yyyy.</note>
       </trans-unit>
       <trans-unit id="6497203" resname="ImageGui::ImageOrientationDialog['YZ-Plane']">
         <source>YZ-Plane</source>
-        <target state="translated">YZ-Plan</target>
+        <target state="translated">YZ-plan</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageOrientationDialog
 ../../ImageOrientationDialog.ui:43</context>
@@ -156,7 +156,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="6497205" resname="ImageGui::ImageOrientationDialog['Offset:']" approved="yes">
         <source>Offset:</source>
-        <target state="final">Offset:</target>
+        <target state="translated">Offset:</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageOrientationDialog
 ../../ImageOrientationDialog.ui:81</context>
@@ -164,7 +164,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176840" resname="ImageGui::ImageView['&amp;Fit image']" approved="yes">
         <source>&amp;Fit image</source>
-        <target state="final">An&amp;passa bild</target>
+        <target state="translated">&amp;Fit-bild</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:108</context>
@@ -172,17 +172,17 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176841" resname="ImageGui::ImageView['Stretch the image to fit the view']" approved="yes">
         <source>Stretch the image to fit the view</source>
-        <target state="final">Skala bilden till vyn</target>
+        <target state="translated">Sträck ut bilden så att den passar i vyn</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:110</context>
         </context-group>
         <note from="Lukino" priority="4">The currently approved translation is not correct, please review my translation:
-&quot;Ridimensiona l'immagine per adattarla alla vista&quot;</note>
+"Ridimensiona l'immagine per adattarla alla vista"</note>
       </trans-unit>
       <trans-unit id="176842" resname="ImageGui::ImageView['&amp;1:1 scale']" approved="yes">
         <source>&amp;1:1 scale</source>
-        <target state="final">&amp;1:1 Skala</target>
+        <target state="translated">&amp;1:1 skala</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:114</context>
@@ -190,7 +190,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176843" resname="ImageGui::ImageView['Display the image at a 1:1 scale']" approved="yes">
         <source>Display the image at a 1:1 scale</source>
-        <target state="final">Visa bilden i 1:1 skala</target>
+        <target state="translated">Visa bilden i skala 1:1</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:116</context>
@@ -198,7 +198,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176848" resname="ImageGui::ImageView['Standard']" approved="yes">
         <source>Standard</source>
-        <target state="final">Standard</target>
+        <target state="translated">Standard</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:125</context>
@@ -206,7 +206,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176849" resname="ImageGui::ImageView['Ready...']" approved="yes">
         <source>Ready...</source>
-        <target state="final">Klar...</target>
+        <target state="translated">Redo...</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:143</context>
@@ -214,7 +214,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176850" resname="ImageGui::ImageView['grey']" approved="yes">
         <source>grey</source>
-        <target state="final">Grå</target>
+        <target state="translated">grå</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:568</context>
@@ -223,7 +223,7 @@ translators have no opportunity to improve</note>
       </trans-unit>
       <trans-unit id="176851" resname="ImageGui::ImageView['zoom']" approved="yes">
         <source>zoom</source>
-        <target state="final">zoom</target>
+        <target state="translated">zoom</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:569
@@ -237,17 +237,17 @@ translators have no opportunity to improve</note>
 ../../ImageView.cpp:629
 ../../ImageView.cpp:634</context>
         </context-group>
-        <note from="moshe (Moshe_Gra)" priority="4">&quot;תקריב&quot; היא מילה לא נפוצה ועדיף לשהתמש ב&quot;זום&quot;
+        <note from="moshe (Moshe_Gra)" priority="4">"תקריב" היא מילה לא נפוצה ועדיף לשהתמש ב"זום"
 
-the word currently used in the translation is not common and should be replaced with: &quot;זום&quot;</note>
+the word currently used in the translation is not common and should be replaced with: "זום"</note>
         <note from="Jon Erling Hustadnes (jonerling.hustadnes)" priority="4">The currently approved translation is not correct, please review my translation:
-&quot;forstørr&quot;
+"forstørr"
 
-&quot;zoom&quot; is usable (borrowed from English), but &quot;forstørr&quot; is the correct Norwegian translation.</note>
+"zoom" is usable (borrowed from English), but "forstørr" is the correct Norwegian translation.</note>
       </trans-unit>
       <trans-unit id="176852" resname="ImageGui::ImageView['outside image']" approved="yes">
         <source>outside image</source>
-        <target state="final">Utanför bild</target>
+        <target state="translated">utanför bild</target>
         <context-group purpose="information">
           <context context-type="source">ImageGui::ImageView
 ../../ImageView.cpp:572
@@ -259,7 +259,7 @@ the word currently used in the translation is not common and should be replaced 
       </trans-unit>
       <trans-unit id="2744934" resname="QObject['Images']" approved="yes">
         <source>Images</source>
-        <target state="final">Bilder</target>
+        <target state="translated">Bilder</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../Command.cpp:70
@@ -268,7 +268,7 @@ the word currently used in the translation is not common and should be replaced 
       </trans-unit>
       <trans-unit id="2744935" resname="QObject['All files']" approved="yes">
         <source>All files</source>
-        <target state="final">Alla filer</target>
+        <target state="translated">Alla filer</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../Command.cpp:75
@@ -277,14 +277,14 @@ the word currently used in the translation is not common and should be replaced 
       </trans-unit>
       <trans-unit id="176855" resname="QObject['Choose an image file to open']" approved="yes">
         <source>Choose an image file to open</source>
-        <target state="final">Välj en bildfil att öppna</target>
+        <target state="translated">Välj en bildfil att öppna</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../Command.cpp:77
 ../../Command.cpp:121</context>
         </context-group>
         <note from="Max (maxwxyz)" priority="4">@FBXL5 also this one is approved.
-&quot;Ein Bild zum Öffnen auswählen&quot; would be better.
+"Ein Bild zum Öffnen auswählen" would be better.
 All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6501591" resname="QObject['Error opening image']">
@@ -297,7 +297,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6501592" resname="QObject['Could not load the chosen image']">
         <source>Could not load the chosen image</source>
-        <target state="translated">Kunde inte ladda den valda bilden</target>
+        <target state="translated">Det gick inte att ladda den valda bilden</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../Command.cpp:128</context>
@@ -314,7 +314,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6602769" resname="Image_Scaling['Scales an image plane by defining a distance between two points']">
         <source>Scales an image plane by defining a distance between two points</source>
-        <target state="translated">Skalar ett bildplan genom att definiera ett avstånd mellan två punkter</target>
+        <target state="translated">Skalar en bildyta genom att definiera ett avstånd mellan två punkter</target>
         <context-group purpose="information">
           <context context-type="source">Image_Scaling
 ../../../ImageTools/_CommandImageScaling.py:59</context>
@@ -322,7 +322,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6602767" resname="Dialog['Scale image plane']">
         <source>Scale image plane</source>
-        <target state="translated">Skala bildplan</target>
+        <target state="translated">Skala bildplanet</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../../../ImageTools/_CommandImageScaling.py:139</context>
@@ -330,7 +330,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6602773" resname="Dialog['Distance']">
         <source>Distance</source>
-        <target state="translated">Distans</target>
+        <target state="translated">Avstånd</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../../../ImageTools/_CommandImageScaling.py:140</context>
@@ -338,7 +338,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6602775" resname="Dialog['Select first point']">
         <source>Select first point</source>
-        <target state="translated">Välj första punkt</target>
+        <target state="translated">Välj första punkten</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../../../ImageTools/_CommandImageScaling.py:141</context>
@@ -362,7 +362,7 @@ All other strings in this file are ok and could be approved IMO</note>
       </trans-unit>
       <trans-unit id="6602781" resname="Dialog['Select second point']">
         <source>Select second point</source>
-        <target state="translated">Markera andra punkten</target>
+        <target state="translated">Välj andra punkten</target>
         <context-group purpose="information">
           <context context-type="source">Dialog
 ../../../ImageTools/_CommandImageScaling.py:184</context>
