--- a/FreeCAD/Inspection_sv-SE.xliff
+++ b/FreeCAD/Inspection_sv-SE.xliff
@@ -12,12 +12,12 @@
           <context context-type="source">CmdInspectElement
 ../../Command.cpp:74</context>
         </context-group>
-        <note from="kazan417" priority="4">maybe It is better name &quot;comparison &quot;</note>
+        <note from="kazan417" priority="4">maybe It is better name "comparison "</note>
         <note from="david69" priority="4">@kazan417 you are right, even the wiki https://wiki.freecad.org/Inspection_Workbench talks about comparison, which is simpler to understand</note>
       </trans-unit>
       <trans-unit id="6676452" resname="CmdInspectElement['Inspection…']">
         <source>Inspection…</source>
-        <target state="needs-translation">Inspection…</target>
+        <target state="translated">Inspektion…</target>
         <context-group purpose="information">
           <context context-type="source">CmdInspectElement
 ../../Command.cpp:75</context>
@@ -25,7 +25,7 @@
       </trans-unit>
       <trans-unit id="6676454" resname="CmdInspectElement['Inspects distance information']">
         <source>Inspects distance information</source>
-        <target state="needs-translation">Inspects distance information</target>
+        <target state="translated">Kontrollerar information om avstånd</target>
         <context-group purpose="information">
           <context context-type="source">CmdInspectElement
 ../../Command.cpp:76</context>
@@ -41,7 +41,7 @@
       </trans-unit>
       <trans-unit id="6676456" resname="CmdVisualInspection['Visual Inspection…']">
         <source>Visual Inspection…</source>
-        <target state="needs-translation">Visual Inspection…</target>
+        <target state="translated">Visuell inspektion…</target>
         <context-group purpose="information">
           <context context-type="source">CmdVisualInspection
 ../../Command.cpp:49</context>
@@ -49,7 +49,7 @@
       </trans-unit>
       <trans-unit id="6676458" resname="CmdVisualInspection['Inspects the objects visually']">
         <source>Inspects the objects visually</source>
-        <target state="needs-translation">Inspects the objects visually</target>
+        <target state="translated">Inspekterar objekten visuellt</target>
         <context-group purpose="information">
           <context context-type="source">CmdVisualInspection
 ../../Command.cpp:50</context>
@@ -99,7 +99,7 @@
       </trans-unit>
       <trans-unit id="6613183" resname="InspectionGui::VisualInspection['Parameter']" approved="yes">
         <source>Parameter</source>
-        <target state="final">Parameter</target>
+        <target state="translated">Parameter</target>
         <context-group purpose="information">
           <context context-type="source">InspectionGui::VisualInspection
 ../../VisualInspection.ui:77</context>
@@ -107,7 +107,7 @@
       </trans-unit>
       <trans-unit id="6613185" resname="InspectionGui::VisualInspection['Search distance']">
         <source>Search distance</source>
-        <target state="translated">Sök avstånd</target>
+        <target state="translated">Sökavstånd</target>
         <context-group purpose="information">
           <context context-type="source">InspectionGui::VisualInspection
 ../../VisualInspection.ui:97</context>
@@ -149,7 +149,7 @@
       </trans-unit>
       <trans-unit id="6613195" resname="QObject['Annotation']">
         <source>Annotation</source>
-        <target state="translated">Annotering</target>
+        <target state="translated">Anteckning</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../ViewProviderInspection.cpp:561</context>
@@ -157,7 +157,7 @@
       </trans-unit>
       <trans-unit id="6676460" resname="QObject['Leave Info Mode']">
         <source>Leave Info Mode</source>
-        <target state="needs-translation">Leave Info Mode</target>
+        <target state="translated">Lämna Info-läge</target>
         <context-group purpose="information">
           <context context-type="source">QObject
 ../../ViewProviderInspection.cpp:564</context>
