--- a/FreeCAD/Test_sv-SE.xliff
+++ b/FreeCAD/Test_sv-SE.xliff
@@ -7,7 +7,7 @@
     <body>
       <trans-unit id="177422" resname="TestGui::UnitTest['Test']" approved="yes">
         <source>Test</source>
-        <target state="final">Test</target>
+        <target state="translated">Test</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:32</context>
@@ -15,7 +15,7 @@
       </trans-unit>
       <trans-unit id="6676498" resname="TestGui::UnitTest['FreeCAD Unit Test']">
         <source>FreeCAD Unit Test</source>
-        <target state="needs-translation">FreeCAD Unit Test</target>
+        <target state="translated">FreeCAD enhetstest</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:17</context>
@@ -23,7 +23,7 @@
       </trans-unit>
       <trans-unit id="6676506" resname="TestGui::UnitTest['Select test name']">
         <source>Select test name</source>
-        <target state="needs-translation">Select test name</target>
+        <target state="translated">Välj testnamn</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:44</context>
@@ -31,7 +31,7 @@
       </trans-unit>
       <trans-unit id="177407" resname="TestGui::UnitTest['&amp;Start']" approved="yes">
         <source>&amp;Start</source>
-        <target state="final">&amp;Start</target>
+        <target state="translated">&amp;Start</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:96</context>
@@ -39,7 +39,7 @@
       </trans-unit>
       <trans-unit id="177408" resname="TestGui::UnitTest['Alt+S']" approved="yes">
         <source>Alt+S</source>
-        <target state="final">Alt+S</target>
+        <target state="translated">Alt+S</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:99</context>
@@ -47,7 +47,7 @@
       </trans-unit>
       <trans-unit id="177409" resname="TestGui::UnitTest['&amp;Help']" approved="yes">
         <source>&amp;Help</source>
-        <target state="final">&amp;Hjälp</target>
+        <target state="translated">&amp;Hjälp</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:128</context>
@@ -55,7 +55,7 @@
       </trans-unit>
       <trans-unit id="177410" resname="TestGui::UnitTest['F1']" approved="yes">
         <source>F1</source>
-        <target state="final">F1</target>
+        <target state="translated">F1</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:131</context>
@@ -63,18 +63,18 @@
       </trans-unit>
       <trans-unit id="177411" resname="TestGui::UnitTest['&amp;About']" approved="yes">
         <source>&amp;About</source>
-        <target state="final">&amp;Om</target>
+        <target state="translated">&amp;Om</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:141</context>
         </context-group>
         <note from="Translator712" priority="4">The current approved translation is not correct, please review my translation:
-&quot;&amp;Über&quot;</note>
+"&amp;Über"</note>
         <note from="luzpaz" priority="4">@yorik should we close this comment?</note>
       </trans-unit>
       <trans-unit id="177412" resname="TestGui::UnitTest['Alt+A']" approved="yes">
         <source>Alt+A</source>
-        <target state="final">Alt+A</target>
+        <target state="translated">Alt+A</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:144</context>
@@ -83,7 +83,7 @@
       </trans-unit>
       <trans-unit id="177413" resname="TestGui::UnitTest['&amp;Close']" approved="yes">
         <source>&amp;Close</source>
-        <target state="final">S&amp;täng</target>
+        <target state="translated">&amp;Stäng</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:154</context>
@@ -91,7 +91,7 @@
       </trans-unit>
       <trans-unit id="177414" resname="TestGui::UnitTest['Alt+C']" approved="yes">
         <source>Alt+C</source>
-        <target state="final">Alt+C</target>
+        <target state="translated">Alt+C</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:157</context>
@@ -99,7 +99,7 @@
       </trans-unit>
       <trans-unit id="177416" resname="TestGui::UnitTest['Progress']" approved="yes">
         <source>Progress</source>
-        <target state="final">Pågår</target>
+        <target state="translated">Förlopp</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:169</context>
@@ -115,7 +115,7 @@
       </trans-unit>
       <trans-unit id="6676536" resname="TestGui::UnitTest['Failures']">
         <source>Failures</source>
-        <target state="needs-translation">Failures</target>
+        <target state="translated">Misslyckanden</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:205</context>
@@ -131,7 +131,7 @@
       </trans-unit>
       <trans-unit id="6676544" resname="TestGui::UnitTest['Remaining']">
         <source>Remaining</source>
-        <target state="needs-translation">Remaining</target>
+        <target state="translated">Återstående</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:239</context>
@@ -139,7 +139,7 @@
       </trans-unit>
       <trans-unit id="6676548" resname="TestGui::UnitTest['Failures and Errors']">
         <source>Failures and Errors</source>
-        <target state="needs-translation">Failures and Errors</target>
+        <target state="translated">Misslyckanden och fel</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:259</context>
@@ -147,7 +147,7 @@
       </trans-unit>
       <trans-unit id="177406" resname="TestGui::UnitTest['Description']" approved="yes">
         <source>Description</source>
-        <target state="final">Beskrivning</target>
+        <target state="translated">Beskrivning</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:275</context>
@@ -155,7 +155,7 @@
       </trans-unit>
       <trans-unit id="177415" resname="TestGui::UnitTest['Idle']" approved="yes">
         <source>Idle</source>
-        <target state="final">Tomgång</target>
+        <target state="translated">Sysslolös</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTest
 ../../UnitTest.ui:292</context>
@@ -163,7 +163,7 @@
       </trans-unit>
       <trans-unit id="177424" resname="TestGui::UnitTestDialog['Help']" approved="yes">
         <source>Help</source>
-        <target state="final">Hjälp</target>
+        <target state="translated">Hjälp</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTestDialog
 ../../UnitTestImp.cpp:165</context>
@@ -174,10 +174,10 @@
 Click 'start', and the test thus produced will be run.
 
 Double click on an error in the tree view to see more information about it, including the stack trace.</source>
-        <target state="translated">Ange namnet på ett anropsbart objekt, som returnerar ett TestCase.
-Klicka på 'Start', för att köra testet.
+        <target state="translated">Ange namnet på ett anropsbart objekt som, när det anropas, kommer att returnera ett TestCase.
+Klicka på "start" och det test som skapats kommer att köras.
 
-Dubbelklicka på ett fel i trädvyn för att se mer information om det, inklusive anropsstacken.</target>
+Dubbelklicka på ett fel i trädvyn för att se mer information om det, inklusive stackspårningen.</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTestDialog
 ../../UnitTestImp.cpp:166</context>
@@ -186,7 +186,7 @@ Dubbelklicka på ett fel i trädvyn för att se mer information om det, inklusiv
       </trans-unit>
       <trans-unit id="177425" resname="TestGui::UnitTestDialog['About FreeCAD UnitTest']" approved="yes">
         <source>About FreeCAD UnitTest</source>
-        <target state="final">Om FreeCAD EnhetsTest</target>
+        <target state="translated">Om FreeCAD UnitTest</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTestDialog
 ../../UnitTestImp.cpp:179</context>
@@ -197,9 +197,9 @@ Dubbelklicka på ett fel i trädvyn för att se mer information om det, inklusiv
         <source>Copyright (c) Werner Mayer
 
 FreeCAD UnitTest is part of FreeCAD and supports writing Unit Tests for ones own modules.</source>
-        <target state="translated">Copyright (c) Werner Mayer
+        <target state="translated">Upphovsrätt (c) Werner Mayer
 
-FreeCAD UnitTest är en del av FreeCAD och stödjer utveckling av enhets tester för egna moduler.</target>
+FreeCAD UnitTest är en del av FreeCAD och stöder skrivning av enhetstester för egna moduler.</target>
         <context-group purpose="information">
           <context context-type="source">TestGui::UnitTestDialog
 ../../UnitTestImp.cpp:180</context>
