--- a/FreeCAD/Tux_sv-SE.xliff
+++ b/FreeCAD/Tux_sv-SE.xliff
@@ -23,7 +23,7 @@
       </trans-unit>
       <trans-unit id="6502917" resname="NavigationIndicator['Rotate']" approved="yes">
         <source>Rotate</source>
-        <target state="final">Rotera</target>
+        <target state="translated">Rotera</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:89</context>
@@ -47,7 +47,7 @@
       </trans-unit>
       <trans-unit id="6503212" resname="NavigationIndicator['Navigation style']">
         <source>Navigation style</source>
-        <target state="translated">Navigationsstil</target>
+        <target state="translated">Navigeringsstil</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:92</context>
@@ -55,7 +55,7 @@
       </trans-unit>
       <trans-unit id="6502921" resname="NavigationIndicator['Page Up or Page Down key.']">
         <source>Page Up or Page Down key.</source>
-        <target state="translated">Page Up eller Page Down-tangenten.</target>
+        <target state="translated">Page Up- eller Page Down-tangenten.</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:93</context>
@@ -73,7 +73,7 @@
       </trans-unit>
       <trans-unit id="6573660" resname="NavigationIndicator['Middle mouse button or H key.']">
         <source>Middle mouse button or H key.</source>
-        <target state="translated">Mittersta musknappen eller H-tangenten.</target>
+        <target state="translated">Mitten musknapp eller H-tangenten.</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:95</context>
@@ -82,13 +82,13 @@
       </trans-unit>
       <trans-unit id="6502924" resname="NavigationIndicator['Middle mouse button.']">
         <source>Middle mouse button.</source>
-        <target state="translated">Mus-knappen i mitten.</target>
+        <target state="translated">Mitten av musknappen.</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:97</context>
         </context-group>
         <note from="david69" priority="4">The currently approved translation is not correct, please review my translation:
-&quot;Roulette de la souris.&quot;</note>
+"Roulette de la souris."</note>
       </trans-unit>
       <trans-unit id="6502925" resname="NavigationIndicator['Navigation style not recognized.']">
         <source>Navigation style not recognized.</source>
@@ -108,7 +108,7 @@
       </trans-unit>
       <trans-unit id="6502927" resname="NavigationIndicator['Orbit style']">
         <source>Orbit style</source>
-        <target state="translated">Orbit stil</target>
+        <target state="translated">Orbit-stil</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:652</context>
@@ -124,7 +124,7 @@
       </trans-unit>
       <trans-unit id="6502929" resname="NavigationIndicator['Tooltip']">
         <source>Tooltip</source>
-        <target state="translated">Verktygstips</target>
+        <target state="translated">Tips</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:654</context>
@@ -138,7 +138,7 @@ OK. good idea, thank you!</note>
       </trans-unit>
       <trans-unit id="6502930" resname="NavigationIndicator['Turntable']">
         <source>Turntable</source>
-        <target state="translated">Skivtallrik</target>
+        <target state="translated">Vridskiva</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:655</context>
@@ -154,7 +154,7 @@ OK. good idea, thank you!</note>
       </trans-unit>
       <trans-unit id="6502931" resname="NavigationIndicator['Trackball']" approved="yes">
         <source>Trackball</source>
-        <target state="final">Trackball</target>
+        <target state="translated">Trackball</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:657</context>
@@ -162,7 +162,7 @@ OK. good idea, thank you!</note>
       </trans-unit>
       <trans-unit id="6674576" resname="NavigationIndicator['Trackball Classic']">
         <source>Trackball Classic</source>
-        <target state="needs-translation">Trackball Classic</target>
+        <target state="translated">Trackball Classic</target>
         <context-group purpose="information">
           <context context-type="source">NavigationIndicator
 ../../NavigationIndicatorGui.py:658</context>
@@ -177,7 +177,7 @@ OK. good idea, thank you!</note>
         </context-group>
         <note from="david69" priority="4">what is a rounded? arcball. I can find descriptions for Arcball on Autocad or Dassault but nothing about rounded arcball.</note>
         <note from="TrillianWeh" priority="4">@david69 I have been totally lost on this expression, too.
-But I found an &quot;explanation&quot;...  https://github.com/FreeCAD/FreeCAD/issues/18070</note>
+But I found an "explanation"...  https://github.com/FreeCAD/FreeCAD/issues/18070</note>
         <note from="david69" priority="4">@TrillianWeh thank you for the research. The GitHub refer to that link https://theshamblog.com/virtual-trackballs-a-taxonomy-and-new-method/#scene_rounded_arcball, for future reader.
 
 have you see in German, you have two different translations?</note>
